- fix: now its work

--- a/ContentDownloader/ContentDownloader.csproj
+++ b/ContentDownloader/ContentDownloader.csproj
@@ -16,4 +16,11 @@
       <ProjectReference Include="..\Robust.LoaderApi\Robust.LoaderApi\Robust.LoaderApi.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="..\NativeWin64\**">
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
