--- a/Content.Datum/Content.Datum.csproj
+++ b/Content.Datum/Content.Datum.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.6.24327.7" />
       <PackageReference Include="SharpZstd.Interop" Version="1.5.5-beta1" />
+      <PackageReference Include="Robust.Natives" />
     </ItemGroup>
 
 </Project>
