--- a/Content.Runner/Content.Runner.csproj
+++ b/Content.Runner/Content.Runner.csproj
@@ -13,6 +13,9 @@
 
     <ItemGroup>
       <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
+      <PackageReference Include="libsodium" Version="1.0.20" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="NLua" Version="1.7.3" />
       <PackageReference Include="Terminal.Gui" Version="2.0.0-prealpha.1829" />
     </ItemGroup>
 
