--- a/Content.Downloader/Content.Downloader.csproj
+++ b/Content.Downloader/Content.Downloader.csproj
@@ -9,11 +9,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Content.Datum\Content.Datum.csproj" />
+      <ProjectReference Include="..\Content.UI\Content.UI.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
-      <PackageReference Include="Terminal.Gui" Version="2.0.0-prealpha.1829" />
+      <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     </ItemGroup>
 
 </Project>
