--- a/Content.Runner/Content.Runner.csproj
+++ b/Content.Runner/Content.Runner.csproj
@@ -9,14 +9,15 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Content.Datum\Content.Datum.csproj" />
+      <ProjectReference Include="..\Content.UI\Content.UI.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
       <PackageReference Include="libsodium" Version="1.0.20" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-      <PackageReference Include="NLua" Version="1.7.3" />
-      <PackageReference Include="Terminal.Gui" Version="2.0.0-prealpha.1829" />
+      <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+      <PackageReference Include="Terminal.Gui" Version="2.0.0-v2-develop.2329" />
     </ItemGroup>
 
 </Project>
